Fixed alignment padding

--- a/formface/_vars.sass
+++ b/formface/_vars.sass
@@ -26,7 +26,7 @@ $ff-padding: 0                  // Form padding
 
 
 // groups
-$ff-group-stacked: true        // Enter 0 for 'stacked', margin in groups
+$ff-group-stacked: stacked        // Enter 0 for 'stacked', margin in groups
 
 
 // fields
@@ -34,25 +34,26 @@ $ff-field-margin-bottom: 1em           // Bottom only, applies to single and gro
 
 
 // labels
-$ff-label-width: 20%
+$ff-label-width: 22%
 $ff-label-position: left      // 'left/right/top/bottom/none'
 $ff-label-align: right          // 'left/right/center'
 $ff-label-font-size: .8em
 $ff-label-font-family: inherit  // use this for font-icons!
 $ff-label-color: inherit
 $ff-label-case: 'none'          // 'upper/lower/none'
-$ff-label-padding: 15px          // left or right based on position
-$ff-label-offset: 2.5      // use this to fine vertically offset caps
+$ff-label-padding: 20px          // left or right based on position
+$ff-label-offset: 7      // use this to fine vertically offset caps
 $ff-label-cap: true
 $ff-label-cap-color: $grey
 $ff-label-text-transform: inherit
+$ff-label-inside: false
 
 // inputs
-$ff-input-font-size: 1em
+$ff-input-font-size: 1.3em
 $ff-input-width: 100%
 $ff-input-height: 1.8em
 $ff-input-padding-horizontal: 12px
-$ff-input-padding-vertical: 6px
+$ff-input-padding-vertical: 10px
 $ff-input-round: 5px
 $ff-input-bg: #fff
 $ff-input-border-style: solid
@@ -83,7 +84,7 @@ $ff-legend-text-align: left
 $ff-help-display: true
 $ff-help-color: inherit
 $ff-help-size: 12px
-$ff-help-align: right
+$ff-help-align: left
 
 // placeholder
 $ff-placeholder-show: true
